--- a/index.ipynb
+++ b/index.ipynb
@@ -76,12 +76,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "def find_term_derivative(term):\n",
-    "    if term[1]return (term[0]*term[1],term[1]-1)"
+    "    if term[1]>0:\n",
+    "        return (term[0]*term[1],term[1]-1)"
    ]
   },
   {
