Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -164,7 +164,8 @@
    "source": [
     "four_x_cubed_minus_three_x = [(4, 3), (-3, 1)]\n",
     "find_derivative(four_x_cubed_minus_three_x)  # [(12, 2), (-3, 0)]\n",
-    "find_term_derivative((-3,0))"
+    "find_term_derivative((-3,0))\n",
+    "find_term_derivative(term) for term in function_terms if term"
    ]
   },
   {
