--- a/index.ipynb
+++ b/index.ipynb
@@ -158,14 +158,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-16-271b9b8f5e9d>, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-16-271b9b8f5e9d>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    find_term_derivative(term) for term in four_x_cubed_minus_three_x if term\u001b[0m\n\u001b[0m                                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "four_x_cubed_minus_three_x = [(4, 3), (-3, 1)]\n",
     "find_derivative(four_x_cubed_minus_three_x)  # [(12, 2), (-3, 0)]\n",
     "find_term_derivative((-3,0))\n",
-    "find_term_derivative(term) for term in function_terms if term"
+    "find_term_derivative(term) for term in four_x_cubed_minus_three_x if term]"
    ]
   },
   {
