--- a/index.ipynb
+++ b/index.ipynb
@@ -158,22 +158,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(12, 2), (-3, 0)]"
+       "[(12, 2), (-3, 0), None]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "four_x_cubed_minus_three_x = [(4, 3), (-3, 1),()]\n",
+    "four_x_cubed_minus_three_x = [(4, 3), (-3, 1),(11,0)]\n",
     "find_derivative(four_x_cubed_minus_three_x)  # [(12, 2), (-3, 0)]\n",
     "find_term_derivative((-3,0))\n",
     "[find_term_derivative(term) for term in four_x_cubed_minus_three_x if term]"
