Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -158,16 +158,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(12, 2), (-3, 0), None]"
+       "[(12, 2), (-3, 0)]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,7 +176,7 @@
     "four_x_cubed_minus_three_x = [(4, 3), (-3, 1),(11,0)]\n",
     "find_derivative(four_x_cubed_minus_three_x)  # [(12, 2), (-3, 0)]\n",
     "find_term_derivative((-3,0))\n",
-    "[find_term_derivative(term) for term in four_x_cubed_minus_three_x if term]"
+    "[find_term_derivative(term) for term in four_x_cubed_minus_three_x if find_term_derivative(term)]"
    ]
   },
   {
