--- a/index.ipynb
+++ b/index.ipynb
@@ -148,12 +148,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "def find_derivative(function_terms):\n",
-    "    return [find_term_derivative(term) for term in function_terms if term]"
+    "    return [find_term_derivative(term) for term in function_terms if find_term_derivative(term)]"
    ]
   },
   {
@@ -188,16 +188,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(6, 1), None]"
+       "[(6, 1)]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
