--- a/index.ipynb
+++ b/index.ipynb
@@ -475,7 +475,7 @@
    "outputs": [],
    "source": [
     "def derivative_function_trace(terms, x_values):\n",
-    "    p"
+    "    return function_values_trace(deriv)"
    ]
   },
   {
