Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -470,17 +470,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "def derivative_function_trace(terms, x_values):\n",
-    "    return function_values_trace(find_derivative(terms))"
+    "    return function_values_trace(find_derivative(terms),x_values)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,9 +489,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'x': [-5, -4, -3, -2, -1, 0, 1, 2, 3, 4],\n",
+       " 'y': [-30, -24, -18, -12, -6, 0, 6, 12, 18, 24],\n",
+       " 'mode': 'lines',\n",
+       " 'name': 'data',\n",
+       " 'text': []}"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "three_x_squared_minus_eleven_derivative_trace"
    ]
@@ -505,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
